--- a/panierachat.html
+++ b/panierachat.html
@@ -18,19 +18,22 @@
         <p>Jaguar</p>
     </div>
 
-    <div class="rectangle"></div>
 
-    <h2>Your Model X</h2>
-    <div id="description">
-        <p>Model Y Long Range Dual Motor All-Wheel Drive</p>
-        <p>Pearl White Paint</p>
-        <p>19’ Gemini Wheels</p>
-        <p>All Black Premium Interior</p>
-        <p>Five Seat Interior</p>
-        <p>Autopilot</p>
-        <p>Tow Hitch</p>
-        <p>1-Year Premium Connectivity Trial </p>
-        <p>More Details</p>
+
+    <div id="description" class="rectangle">
+        <h2>Your Model X</h2>
+        <ul style="list-style-type:none;">
+            <li>Model Y Long Range Dual Motor All-Wheel Drive</li>
+            <li>Pearl White Paint</li>
+            <li>19’ Gemini Wheels</li>
+            <li>All Black Premium Interior</li>
+            <li>Five Seat Interior</li>
+            <li>Autopilot</li>
+            <li>Tow Hitch</li>
+            <li>1-Year Premium Connectivity Trial </li>
+            <li>More Details</li>
+        </ul>
     </div>
+
 </body>
 </html>
